Use invert colors for Google

--- a/Nightshift Extension/google-dark.css
+++ b/Nightshift Extension/google-dark.css
@@ -1,652 +1,20 @@
-:root {
-  --bg-color: rgb(40, 40, 40);
-  --bg-dark-color: rgb(30, 30, 30);
-  --bg-light-color: rgb(50, 50, 50);
-  --bg-hover-color: rgb(50, 52, 55);
-  --text-color: rgba(255, 255, 255, 0.78);
-  --muted-text-color: rgb(128, 128, 128);
-  --link-color: rgb(138, 181,248);
-  --link-visited: rgb(204, 153, 204);
-  --link-gray: rgb(150, 150, 150);
-  --border-color: rgb(73, 73, 73);
-  --inner-border-color: rgba(73, 73, 73, .5);
-}
-
 @media (prefers-color-scheme: dark) {
-    html {
-        background-color: var(--bg-dark-color) !important;
-    }
-
-    body {
-        background-color: var(--bg-color) !important;
-        border-color: var(--border-color) !important;
-        color: var(--text-color) !important;
-    }
-
-    a {
-        color: var(--link-color) !important;
-        border-color: var(--border-color) !important;
-    }
-    
-    a:visited {
-        color: var(--link-visited) !important;
-    }
-
-    h1, h2, h4 {
-        color: var(--text-color) !important;
-    }
-
-    input {
-        color: var(--text-color) !important;
-    }
-
-    input[type="submit"] {
-        background: var(--bg-light-color) !important;
-        border-color: var(--border-color) !important;
-    }
-
-    /* Main Page */
-
-    #gb a {
-        color: var(--text-color) !important;
-    }
-
-    #searchform .RNNXgb {
-        background-color: var(--bg-light-color) !important;
-        border-color: var(--bg-light-color) !important;
-    }
-
-    #searchform .aajZCb {
-        background-color: var(--bg-light-color) !important;
-        border-color: var(--bg-light-color) !important;
-    }
-
-    #searchform .sbl1 {
-        color: var(--text-color) !important;
-    }
-
-    #searchform .sbl1p {
-        color: rgb(204, 153, 204) !important;
-    }
-    
-    #searchform .sbhl {
-        background: var(--bg-color) !important;
-    }
-
-    #fbar {
-        background-color: var(--bg-dark-color) !important;
-        border-color: var(--border-color) !important;
-    }
-    
-    .gb_tc {
-        filter: invert(1);
-    }
-
-    /* Search Results */
-
-    .sfbgg {
-        background-color: var(--bg-dark-color) !important;
-    }
-
-    .minidiv .sfbg {
-        background: var(--bg-dark-color) !important;
-    }
-
-    #hdtbSum {
-        background: var(--bg-dark-color) !important;
-    }
-
-    #hdtbSum a {
-        color: var(--link-gray) !important;
-    }
-    
-    #hdtb .hdtb-mitem:hover a {
-        color: var(--link-color) !important;
-    }
-
-    body.vasq #hdtb-msb .hdtb-mitem.hdtb-msel {
-        border-color: var(--link-color) !important;
-        color: var(--link-color) !important;
-    }
-
-    #hdtb {
-        border-color: var(--border-color) !important;
-    }
-    
-    #hdtb-tls:hover {
-        background: var(--bg-light-color) !important;
-        color: var(--link-color) !important;
-    }
-
-    .kno-ecr-pt {
-        color: var(--text-color) !important;
-    }
-    
-    .rsir2d {
-        color: var(--muted-text-color) !important;
-    }
-    
-    .AUiS2 {
-        border-color: var(--border-color) !important;
-    }
-    
-    .cF4V5c {
-        background-color: var(--bg-light-color) !important;
-        -webkit-backdrop-filter: blur(12px) !important;
-        box-shadow: none !important;
-    }
-    
-    .cF4V5c a {
-        color: var(--text-color) !important;
-    }
-    
-    .s {
-        color: rgba(114, 116, 116, 0.8) !important;
-    }
-
-    .s .st em, .st.s.std em {
-        color: var(--muted-text-color) !important;
-    }
-
-    .a, cite, cite a:link, cite a:visited, .cite, .cite:link, #nygTcd>i, .bc a:link {
-        color: var(--muted-text-color) !important;
-    }
-
-    .GHDvEf, .GHDvEf:hover, .GHDvEf.selected, .GHDvEf.selected:hover {
-        background: none !important;
-    }
-
-    .action-menu .mn-dwn-arw {
-        border-color: var(--muted-text-color) transparent !important;
-    }
-
-    .kp-blk {
-        background-color: var(--bg-dark-color) !important;
-        border-color: var(--border-color) !important;
-    }
-    
-    .kp-blk .xpdopen .mJ2Mod {
-        border-color: var(--border-color) !important;
-    }
-
-    .cbphWd {
-        border-color: var(--inner-border-color) !important;
-    }
-    
-    .Ss2Faf {
-        color: var(--text-color) !important;
-    }
-    
-    g-inner-card {
-        background-color: var(--bg-dark-color) !important;
-    }
-    
-    .cv2VAd {
-        border-color: var(--border-color) !important;
-    }
-    
-    .Mw2I7 {
-        background-color: var(--bg-dark-color) !important;
-        border-color: var(--border-color) !important;
-        color: var(--muted-text-color) !important;
-    }
-
-    .EZRelc, .wUrVib {
-        color: var(--link-color) !important;
-    }
-
-    #brs .med {
-        color: var(--text-color) !important;
-    }
-
-    #foot .AaVjTc .YyVfkd {
-        color: var(--text-color) !important;
-    }
-
-    #Wprf1b {
-        color: var(--text-color) !important;
-    }
-
-    .fbar a {
-        color: var(--muted-text-color) !important;
-    }
-    
-    .Eegi6c {
-        color: var(--text-color) !important;
-    }
-    
-    .kp-blk .xpdclose .farUxc,
-    .kp-blk .xpdopen .mJ2Mod {
-        border-top-color: var(--border-color) !important;
-    }
-    
-    .scrt tr:first-child td {
-        border-top-color: var(--inner-border-color) !important;
-    }
-    
-    .scrt td {
-        border-bottom-color: var(--inner-border-color) !important;
-    }
-    
-    .xpdclose .a84NUc:not(:empty),
-    .xpdopen .CQKTwc:not(:empty) {
-        border-top-color: var(--border-color) !important;
-    }
-    
-    .yMspv {
-        background-color: var(--bg-dark-color) !important;
-    }
-    
-    .iT3aZd+div {
-        border-top-color: var(--inner-border-color) !important;
-    }
-    
-    .iq-bubble {
-        background: var(--bg-color) !important;
-        border-color: var(--border-color) !important;
-        color: var(--muted-text-color) !important;
-    }
-    
-    .iq-bubble:hover {
-        background: var(--bg-light-color) !important;
-        color: var(--text-color) !important;
-    }
-    
-    .jPHPSe,
-    .ersBRc {
-        color: var(--link-color) !important;
-    }
-    
-    .bv9RPe,
-    .SSYIcf  {
-        color: var(--muted-text-color) !important;
-    }
-    
-    .eojFMe {
-        background-color: var(--bg-color) !important;
-    }
-    
-    .z1asCe svg {
-        fill: var(--text-color) !important;
-    }
-    
-    .DEJ8le {
-        border-color: var(--border-color) !important;
-    }
-    
-    .StR8Re {
-        border-color: var(--border-color) !important;
-    }
-    
-    .aR1mEe {
-        border-bottom-color: var(--border-color) !important;
-    }
-    
-    g-fab {
-        background-color: var(--bg-light-color) !important;
-        border-color: var(--border-color) !important;
-    }
-    
-    .mdFQt.WH6xid.Dgj8Pb {
-        background-color: var(--bg-dark-color) !important;
-    }
-    
-    .V7X3Je {
-        color: var(--text-color) !important;
-    }
-    
-    .I6TXqe {
-        border-color: var(--border-color) !important;
-    }
-    
-    .I6TXqe div {
-        border-color: var(--border-color) !important;
-    }
-    
-    .ktf {
-        background-color: var(--bg-dark-color) !important;
-        border-color: var(--border-color) !important;
-    }
-    
-    .mslg .ab_button {
-        background-color: var(--bg-light-color) !important;
-        border-color: var(--border-color) !important;
-    }
-    
-    .Qynugf {
-        color: var(--muted-text-color) !important;
-    }
-    
-    .SW5pqf {
-        color: var(--link-color) !important;
-    }
-    
-    .SW5pqf:hover {
-        text-decoration: underline !important;
-    }
-    
-    .rl_item_base {
-        background-color: var(--bg-color) !important;
-    }
-    
-    .rl_item_base .title {
-        color: var(--text-color) !important;
-    }
-    
-    .th {
-        border-color: var(--border-color) !important;
-    }
-    
-    .qmv19b {
-        background-color: var(--bg-dark-color) !important;
-        border-color: var(--border-color) !important;
-    }
-    
-    .EPLo7b {
-        border-top-color: var(--inner-border-color) !important;
-    }
-    
-    .tYlW7b span {
-        color: var(--muted-text-color) !important;
-    }
-    
-    .ccBEnf {
-        background-color: var(--bg-dark-color) !important;
-        border-color: var(--border-color) !important;
-    }
-    
-    .yyjhs {
-        background-color: var(--bg-light-color) !important;
-    }
-    
-    .cXedhc span {
-        color: var(--muted-text-color) !important;
-    }
-    
-    .vk_c, .vk_cxp, #rhs .fIcnad {
-        border-color: var(--border-color) !important;
-    }
-    
-    .uMdZh:hover {
-        background-color: var(--bg-hover-color) !important;
-    }
-    
-    .dbg0pd span {
-        color: var(--text-color) !important;
-    }
-    
-    .DLOTif {
-        color: var(--link-color) !important;
-    }
-    
-    .wYWDAd {
-        border-color: var(--inner-border-color) !important;
-    }
-    
-    div.AEprdc.vk_c {
-        background-color: var(--bg-light-color) !important;
-    }
-    
-    .zkIadb {
-        border-color: var(--border-color) !important;
-    }
-    
-    .czHJJ {
-        border-color: var(--border-color) !important;
-        background-color: var(--bg-light-color) !important;
-    }
-    
-    .w3RMhb .zFsEvf {
-        color: var(--muted-text-color) !important;
-    }
-    
-    .w3RMhb:hover {
-        background-color: var(--bg-color) !important;
-    }
-    
-    .F7IIOc.rlf__open:not(.rlf__applied),
-    .F7IIOc:not(.rlf__applied):hover {
-        color: var(--text-color) !important;
-    }
-    
-    .FZaw6b {
-        border-top-color: var(--muted-text-color) !important;
-        border-bottom-color: var(--muted-text-color) !important;
-    }
-    
-    .F7IIOc.rlf__open:not(.rlf__applied) .FZaw6b,
-    .F7IIOc:not(.rlf__applied):hover .FZaw6b {
-        border-top-color: var(--text-color) !important;
-        border-bottom-color: var(--text-color) !important;
-    }
-    
-    .tGgE5d {
-        border-top-color: var(--border-color) !important;
-    }
-    
-    .H73aad {
-        background: var(--bg-color) !important;
-    }
-    
-    .jleFbf {
-        color: var(--text-color) !important;
-    }
-    
-    .zf84ud {
-        background-color: var(--bg-color) !important;
-    }
-    
-    .xERobd g-img {
-        filter: hue-rotate(180deg) !important;
-    }
-    
-    #dimg_104 {
-        filter: invert(1);
-    }
-    
-    /* Profile in the top right corner */
-    
-    .gb_F {
-        background: var(--bg-color) !important;
-    }
-    
-    .gb_l .gb_ob {
-        color: var(--text-color) !important;
-    }
-    
-    .gb_ub.gb_ub {
-        background-color: var(--bg-light-color) !important;
-    }
-    
-    .gb_ub:hover {
-        background-color: var(--bg-dark-color) !important;
-    }
-    
-    .gb_yb.gb_yb {
-        background: none !important;
-    }
-    
-    .gb_yb:hover {
-        background-color: var(--bg-dark-color) !important;
-    }
-    
-    .gb_Lb {
-        border-color: var(--border-color) !important;
-    }
-    
-    .gb_Eb {
-        border-color: var(--border-color) !important;
-    }
-    
-    .gb_Fb.gb_Fb, .gb_Hb.gb_Hb {
-        background-color: var(--bg-color) !important;
-        border-color: var(--border-color) !important;
-    }
-    
-    .gb_Fb:hover {
-        background-color: var(--bg-dark-color) !important;
-    }
-    
-    .gb_wb:hover {
-        background-color: var(--bg-dark-color) !important;
-    }
-    
-    .gb_l .gb_rb {
-        color: var(--text-color) !important;
-    }
-    
-    .gb_xb.gb_xb {
-        background-color: var(--bg-light-color) !important;
-    }
-    
-    .gb_xb:hover {
-        background-color: var(--bg-dark-color) !important;
-    }
-    
-    .gb_Bb.gb_Bb {
-        background-color: var(--bg-color) !important;
-    }
-    
-    .gb_Jb.gb_Jb,
-    .gb_Kb.gb_Kb {
-        background-color: var(--bg-light-color) !important;
-    }
-    
-    .gb_Jb:hover {
-        background-color: var(--bg-dark-color) !important;
-    }
-    
-    .gb_Ib {
-        border-top-color: var(--border-color) !important;
-        border-bottom-color: var(--border-color) !important;
-    }
-    
-    .gb_l .gb_tb {
-        color: var(--muted-text-color) !important;
-    }
-    
-    .gb_pb>svg.gb_qb,
-    .gb_Cb>svg.gb_Db,
-    .gb_Eb>svg.gb_Fb {
-        color: var(--muted-text-color) !important;
-    }
-    
-    /* Images */
-    
-    .OcgH4b {
-        background-color: var(--bg-color) !important;
-    }
-    
-    .zthhpf {
-        background-color: var(--bg-light-color) !important;
-        border-color: var(--bg-light-color) !important;
-    }
-    
-    .FtRlBe,
-    .jZWadf {
-        background-color: var(--bg-dark-color) !important;
-    }
-    
-    .cj2HCb a,
-    .O850f a {
-        color: var(--link-gray) !important;
-    }
-    
-    .rQEFy,
-    .O850f a:hover {
-        border-color: var(--link-color) !important;
-        color: var(--link-color) !important;
-    }
-    
-    .PNyWAd {
-        color: var(--muted-text-color) !important;
-    }
-    
-    .cj2HCb a:hover,
-    .PNyWAd:hover {
-        color: var(--link-color) !important;
-    }
-
-    .ZXJQ7c:hover {
-        background: var(--bg-light-color) !important;
-        border-color: var(--border-color) !important;
-    }
-    
-    .jq2rAe {
-        background-color: var(--bg-color) !important;
-        border-color: var(--border-color) !important;
-    }
-    
-    .BR6jBc {
-        border-color: var(--inner-border-color) !important;
-    }
-    
-    .PfSDnb:hover {
-        background-color: var(--bg-hover-color) !important;
-    }
-    
-    .ymoOte .Ew9oWb {
-        border-top-color: var(--border-color) !important;
-    }
-    
-    .F9PbJd {
-        background-color: var(--bg-light-color) !important;
-        border-color: var(--border-color) !important;
-    }
-
-    .WTHmze,
-    a.F9PbJd {
-        color: var(--link-gray) !important;
-    }
-    
-    a:hover.F9PbJd:hover,
-    a:focus.F9PbJd:focus {
-        color: var(--link-color) !important;
-    }
-    
-    .cEW58 {
-        background-color: var(--border-color) !important;
-    }
-    
-    .khjlM .dyAbMb {
-        fill: var(--text-color) !important;
-    }
-    
-    .WGvvNb {
-        color: var(--text-color) !important;
-    }
-    
-    .fxgdke {
-        color: var(--muted-text-color) !important;
-    }
-    
-    .RScZKc {
-        color: var(--text-color) !important;
-    }
-    
-    .W8wzH {
-        color: var(--link-gray) !important;
-    }
-    
-    .cEPPT {
-        border-color: var(--border-color) !important;
-    }
-    
-    /* Image Preview */
-    
     .WaWKOe,
     .qdnLaf,
     .mfkH6e,
     .QnfS4e {
-        background-color: var(--bg-dark-color) !important;
+        background-color: rgb(220, 220, 220) !important;
     }
     
-    .h04bR,
-    .dJcyOc {
-        background-color: var(--bg-light-color) !important;
+    .Beeb4e {
+        color: rgb(5, 5, 5) !important;
     }
     
-    .XeEBj {
-        fill: var(--link-color) !important;
+    .a0XzNd .O8VmIc .gadasb {
+        color: rgb(20, 20, 20) !important;
+    }
+    
+    .jdp5U .WGvvNb {
+        color: rgb(40, 40, 40) !important;
     }
 }
